# hitachi_elevator

./: .dockerignore  .env.example  Dockerfile  docker-compose.dev.yml  docker-compose.es-port.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: build-push-image.yml
docs/: 困人困梯检测接口.md  敏感词匹配接口.md  文档解析接口.md  智能填单接口.md  知识库匹配（知识跟随）接口.md  算法接口需求v0.3.docx
src/: app.py  check_external_service.py  es.py  models.py
src/api/: __init__.py  doc_parse.py  knowledge.py  sensitive.py  smart_fill.py  trapped_detect.py
src/providers/: __init__.py  siliconflow.py  tei.py  vllm.py  xinference.py
